--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,13 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base{
+  body {
+      @apply dark:bg-gray-800 bg-white
+  }
+}
+
 :root {
   --g-color-black: #000;
   --g-color-white: #fff;
